made sure all the processes are in the ready queue